Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,11 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'New Mexico'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mexico = countries\n",
+    "mexico = countries[6]\n",
     "mexico "
    ]
   },
